--- a/第一周/day03/03_代码/05_dowhile循环.html
+++ b/第一周/day03/03_代码/05_dowhile循环.html
@@ -38,6 +38,12 @@
     //     console.log('执行循环中的代码')
     //     n++
     // }
+
+    // 
+    do{
+        // 至少执行一次，采集用户输入的密码
+        var pwd =  prompt('请输入密码')
+    }while(pwd !== '123456')
     </script>
 </body>
 </html>
