--- a/第一周/day03/03_代码/07_for循环案例.html
+++ b/第一周/day03/03_代码/07_for循环案例.html
@@ -1,34 +1,46 @@
 <!DOCTYPE html>
 <html lang='en'>
+
 <head>
     <meta charset='UTF-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Document</title>
 </head>
+
 <body>
     <script>
         /*
-            将 1000 ~ 2000 之间所有的闰年输出在页面上
-            每四个换一行
-
-            思路
-                1. 重复做的事情是什么
-                    > 在页面上输出年份数字 document.write()
-                2. 是否需要一组有规律的数字支持
-                    > 1000 ~ 2000 之间的数字
+            求最大公约数
+                约数： 能被该数字整除的数字
+                    eg: 12的约数  1 2 3 4 6 12 
+                公约数：能分别被两个数字整除的 
+                    eg：12 和 8 的公约数  4 
+                最大公约数：两个数字所有的公约数中最大的一个
+                    eg: 30 12 的最大公约数 6 
         */
 
-        // 设置一个计数器， 第四个就换行
-        var count = 0
-        for(var i = 1000; i<= 2000; i+=4) {
-            // 闰年的时候输出
-            if(i % 100 !== 0 || i % 400 === 0) {
-                document.write(i + ' ')
-                count ++ 
-                if( count % 4=== 0) document.write('<br>')
+        var max = 30
+        var min = 12
+
+        /*
+            思考
+                1. 要重复的事情
+                    寻找一个数字是否能同时被min max整除
+                2. 是否需要有规律的数字
+                    最小值 1 最大值 min 
+                3. 找到最大的
+        */
+
+        var res = 1
+        for (var i = 1; i <= min; i++) {
+            if (min % i === 0 && max % i === 0) {
+                console.log(i)
+                res = i
             }
         }
+        console.log(res)
     </script>
 </body>
+
 </html>
