--- a/第一周/day01新/03_js注释书写.html
+++ b/第一周/day01新/03_js注释书写.html
@@ -9,7 +9,9 @@
   <body></body>
 </html>
 <script>
-  /*
-
-  */
+  // js注释
+  // ctrl + / 单行注释
+  /* 
+        shift + alt + a 多行注释
+    */
 </script>
