--- a/第一周/day01新/03_js的注释书写.html
+++ b/第一周/day01新/03_js的注释书写.html
@@ -9,9 +9,15 @@
   <body></body>
 </html>
 <script>
-  // js注释
-  // ctrl + / 单行注释
-  /* 
-        shift + alt + a 多行注释
-    */
+  /*
+    js的注释书写
+        - 单行注释  // ctrl + /
+        - 多行注释  shift + alt + a 
+  */
+
+  //   单行注释
+  /*
+    多行注释
+    shift + alt + a 
+*/
 </script>
