--- a/第一周/day01新/10_1其他数据类型转为数值类型.html
+++ b/第一周/day01新/10_1其他数据类型转为数值类型.html
@@ -14,7 +14,11 @@
     1. Number()
         - 语法 Number(要转换的数据)
         - 返回值 转换好的内容
-        - 转换规则 整体能转就转数值，不能就返回NaN 
+        - 转换规则 
+            1. 布尔值true转为1 false转为0
+            2. null 转为0
+            3. undefined 转为 NaN 
+            4. 字符串转换，整体能转数字就转，不能就返回NaN, 空字符串('')转为0
     2. parseInt()
         - 语法 parseInt(要转换的数据)
         - 返回值 转换好的内容
@@ -26,7 +30,9 @@
         - 转换规则 从第一个开始转换，第一位不能转返回NaN , 第一位能转就继续转换，直到不能转换为止，
                     只识别第一个小数点
     4. 非加运算
-        - 
+        - 转换规则  运算符号两边的内容按照Number方法转换，转换后进行计算，不能转换就返回NaN
+    5. 正号
+        - 转换规则  正号后面的内容按照Number方法转换
   */
 
   // 1. Number
