--- a/第一周/day01新/10_数据类型转换.html
+++ b/第一周/day01新/10_数据类型转换.html
@@ -12,7 +12,16 @@
   /*
     数据类型转换
         - 其他类型转为数值类型
+            -> Number
+            -> parseInt
+            -> parseFloat
+            -> 非加运算
+            -> 正号
         - 其他类型转为字符串类型
+            -> String
+            -> toString
+            -> 字符串拼接
         - 其他类型转为布尔类型
+            -> Boolean
   */
 </script>
