--- a/第一周/day02新/05_条件分支语句.html
+++ b/第一周/day02新/05_条件分支语句.html
@@ -10,7 +10,90 @@
 </html>
 <script>
   /*
-    条件分支语句 - if
-        -> 意义: 根据条件决定是否执行代码
-  */
+     条件分支语句 - if
+         -> 意义: 根据条件决定是否执行代码, 或者执行哪一段代码
+         -> 一个条件分支语句只能执行依次
+   */
+
+  /*
+     1. if语句
+         -> 语法  if(条件) { 代码段 }
+         -> 意义  当条件为true  执行{} 中的代码
+         -> 注意  () 中的条件可以是任意表达式，js会把表达式的结果用Boolean转为布尔值(隐式转换)
+   */
+
+  // 1. if语句
+  //   var age = "18";
+  //   if (age >= 18) {
+  //     console.log("可以去网吧了");
+  //   }
+
+  //   if (true) {
+  //     console.log("条件为true, 代码可以执行");
+  //   }
+
+  //   if (null) {
+  //     console.log("条件为true, 代码可以执行");
+  //   }
+
+  //   if (10) {
+  //     console.log("条件为true, 代码可以执行");
+  //   }
+
+  /*
+     2. if else 语句
+         -> 语法 if(条件) { 代码块 } else { 代码块 }
+         -> 意义 当条件为true 执行if后面的代码块，当条件为false, 执行else后面的代码块
+         -> 注意：
+                 1. 两个{}只能执行一个
+                 2. () 中的条件可以是任意表达式，js会把表达式的结果用Boolean转为布尔值(隐式转换)
+   */
+
+  // 2. if else
+  //   var age = 18;
+  //   if (age >= 18) {
+  //     console.log("可以去网吧了");
+  //   } else {
+  //     console.log("借一个身份证去网吧");
+  //   }
+
+  /*
+     3. if ... else if 语句
+         -> 语法  if (条件) { 代码块 } else if (条件2) { 代码块 }  else if (条件3) { 代码块 } ...
+         -> 意义  按照顺序依次判断条件，哪个为true, 执行哪个后面的代码块
+         -> 注意
+                 1. 多个{} 最多只能执行一个
+                 2. () 中的条件可以是任意表达式，js会把表达式的结果用Boolean转为布尔值(隐式转换)
+   */
+
+  // 3. if ... else if
+  //   var age = 18;
+  //   if (age >= 22) {
+  //     console.log("可以结婚了");
+  //   } else if (age >= 16) {
+  //     console.log("可以谈恋爱了");
+  //   } else if (age >= 6) {
+  //     console.log("可以和女同学做同坐");
+  //   }
+
+  /*
+     4. if ... else if ... else 语句
+         -> 语法 if(条件) { 代码块 } else if (条件2) { 代码块 } else if (条件3) { 代码块 } else { 代码块 }
+         -> 意义 按照顺序依次判断条件，哪个为true, 就执行哪个后面的代码块，如果都不满足，执行最后一个else
+         -> 注意
+                 1. 多个{}只能执行一个
+                 2. () 中的条件可以是任意表达式，js会把表达式的结果用Boolean转为布尔值(隐式转换)
+   */
+
+  //   4. if ... else if ... else
+  //   var age = 18;
+  //   if (age >= 22) {
+  //     console.log("可以结婚了");
+  //   } else if (age >= 16) {
+  //     console.log("可以谈恋爱了");
+  //   } else if (age >= 6) {
+  //     console.log("可以和女同学做同坐");
+  //   } else {
+  //     console.log("回家和小姨玩");
+  //   }
 </script>
