--- a/第一周/day02新/07_三元表达式.html
+++ b/第一周/day02新/07_三元表达式.html
@@ -11,6 +11,45 @@
 <script>
   /*
     三元表达式(三目运算 三目 三元运算)
-        -> 语法 条件 ? 对的执行代码 : 不对的执行代码
+        -> 语法  条件 ? 对的执行代码 : 不对的执行代码
+        -> 意义  就是对if else的简化
+        -> 注意  
+                1. 三元表达式可以嵌套
+                2. 执行代码的地方只能写一句话
+        -> 作用
+                1. 利用三元表达式执行代码
+                2. 利用三元表达式进行赋值
   */
+
+  //   var age = 20;
+  //   if (age > 22) {
+  //     console.log("可以结婚了");
+  //   } else {
+  //     console.log("可以谈恋爱");
+  //   }
+
+  // 三元简化上述代码  条件 ? 对的执行代码 : 不对的执行代码
+  //   age > 22 ? console.log("可以结婚了") : console.log("可以谈恋爱了");
+
+  //   var age = 20;
+  //   if (age >= 22) {
+  //     console.log("可以结婚了");
+  //   } else if (age >= 15) {
+  //     console.log("可以谈恋爱");
+  //   } else {
+  //     console.log("可以和女同学做同桌了");
+  //   }
+
+  //   age >= 22
+  //     ? console.log("可以结婚了")
+  //     : age >= 15
+  //     ? console.log("可以谈恋爱")
+  //     : console.log("可以和女同学做同桌了");
+
+  // 利用三元表达式进行赋值
+  // 需求 根据一组四位数的第三位判断是男士还是女士，给变量text赋值, 奇数 男士  偶数 女士
+  var origin = 2221;
+  var num = parseInt((origin % 100) / 10);
+  var text = num % 2 ? "男士" : "女士";
+  console.log(text);
 </script>
