--- a/第一周/day02新/01_逻辑操作符.html
+++ b/第一周/day02新/01_逻辑操作符.html
@@ -49,10 +49,10 @@
         -> 返回一个布尔值
         -> 双非转布尔
   */
-  console.log(!true);
-  console.log(!undefined);
-  console.log(!null);
-  console.log(!!undefined);
-  console.log(!!null);
-  console.log(!!0);
+  console.log(!true)
+  console.log(!undefined)
+  console.log(!null)
+  console.log(!!undefined)
+  console.log(!!null)
+  console.log(!!0)
 </script>
