--- a/第一周/day02新/03_一些小方法.html
+++ b/第一周/day02新/03_一些小方法.html
@@ -61,8 +61,8 @@
             NaN和NaN比较，返回的是true
   */
 
-  console.log(Object.is(1, 1));
-  console.log(Object.is(1, "1"));
-  console.log(Object.is(null, undefined));
-  console.log(Object.is(NaN, NaN));
+  console.log(Object.is(1, 1))
+  console.log(Object.is(1, "1"))
+  console.log(Object.is(null, undefined))
+  console.log(Object.is(NaN, NaN))
 </script>
