--- a/第一周/day02新/06_if小案例.html
+++ b/第一周/day02新/06_if小案例.html
@@ -95,16 +95,16 @@
     60 ~ 69 D
     60 以下 E
   */
-  var score = 50;
-  if (score >= 90) {
-    console.log("A");
-  } else if (score >= 80) {
-    console.log("B");
-  } else if (score >= 70) {
-    console.log("C");
-  } else if (score >= 60) {
-    console.log("D");
-  } else {
-    console.log("E");
-  }
+  // var score = 50;
+  // if (score >= 90) {
+  //   console.log("A");
+  // } else if (score >= 80) {
+  //   console.log("B");
+  // } else if (score >= 70) {
+  //   console.log("C");
+  // } else if (score >= 60) {
+  //   console.log("D");
+  // } else {
+  //   console.log("E");
+  // }
 </script>
