--- a/第一周/day05/02_作用域.html
+++ b/第一周/day05/02_作用域.html
@@ -25,7 +25,7 @@
 			function fn() {
 				var b = 100; // 局部作用域
 				console.log(a); // 10 全局变量
-				console.log(b);
+				console.log(b); // 100 局部变量 函数内使用
 			}
 			console.log(a, "外面");
 			console.log(b, "外面");
