--- a/第一周/day05/02_作用域.html
+++ b/第一周/day05/02_作用域.html
@@ -19,16 +19,26 @@
                     - 局部作用域(私有作用域/函数作用域)
                         -> 只有函数才可以生成局部作用域
                         -> 局部作用域中定义的变量只能在这个局部作用域内部使用
+
+                特殊情况
+                    函数内部声明的变量，声明的时候没有添加var关键字，这个时候该变量被视为全局变量
             */
 
-			var a = 10; // 全局作用域
+			// var a = 10; // 全局作用域
+			// function fn() {
+			// 	var b = 100; // 局部作用域
+			// 	console.log(a); // 10 全局变量
+			// 	console.log(b); // 100 局部变量 函数内使用
+			// }
+			// console.log(a, "外面"); // 10 全局变量
+			// console.log(b, "外面"); // 报错 局部变量在函数外无法访问
+
+			// 全局变量
 			function fn() {
-				var b = 100; // 局部作用域
-				console.log(a); // 10 全局变量
-				console.log(b); // 100 局部变量 函数内使用
+				a = 100; // 前面没有var 被视为全局变量
+				console.log(a); // 100 全局变量
 			}
-			console.log(a, "外面");
-			console.log(b, "外面");
+			console.log(a); // 100 全局变量
 		</script>
 	</body>
 </html>
