--- a/第二周/day06/00_回顾.html
+++ b/第二周/day06/00_回顾.html
@@ -10,6 +10,34 @@
 </html>
 <script>
   /*
+    作用域
+        全局作用域
+                window
+        私有作用域 (局部作用域 函数作用域)
+            函数产生的一个作用域，函数中定义的变量，只要函数里面可以用
+        特殊情况
+            函数中没有用var 声明的变量，认为是全局变量
 
+    作用域链
+        - 访问机制
+            从当前作用域开始查找，没有就向上一级查找，直到找到window, window 报错 
+        - 赋值机制
+            从当前作用域开始查找，没有就向上一级查找，直到找到window, window没有，就认为是一个全局变量
+
+    递归函数    
+        自己调用自己的方式
+        步骤
+            1. 找到终止条件 return
+            2. 其他情况正常写，不要忘记return 
+
+    对象
+        - 引用数据类型的一种 Object
+        - 私人 是一个盒子 放数据
+        - 没有顺序
+
+        对象的基本操作
+            增删改查   点语法   数组关联语法
+            for in 遍历
+    
   */
 </script>
