--- a/第二周/day07/00_作业.html
+++ b/第二周/day07/00_作业.html
@@ -78,6 +78,10 @@
   // 作业2
   function map(arr) {
     var res = []
-    for (var i = 0; i < arr.length; i++) {}
+    for (var i = 0; i < arr.length; i++) {
+      res.push(arr[i] * 10)
+    }
+    return res
   }
+  console.log(map([100, 200, 300]))
 </script>
