--- a/第五周/day21/05-拷贝继承.html
+++ b/第五周/day21/05-拷贝继承.html
@@ -44,7 +44,7 @@
     // console.log('sayHi' in f);
 
     /* 
-        hasOwnPrototype() 方法
+        hasOwnProperty() 方法
         语法 对象.hasOwnPrototype('属性名')
         返回值  true/false 
                 表示该属性名是否在该对象身上
@@ -56,8 +56,8 @@
     // }
     // Person.prototype.age = 18
     // const p = new Person()
-    // console.log(p.hasOwnPrototype('name'));
-    // console.log(p.hasOwnPrototype('age'));
+    // console.log(p.hasOwnProperty('name'));
+    // console.log(p.hasOwnProperty('age'));
 
     /* 
         书写for in 遍历的时候，不仅对象本身的属性可以获取到，原型上的也可以获取到
