--- a/第五周/day22/03-认识闭包.html
+++ b/第五周/day22/03-认识闭包.html
@@ -24,6 +24,8 @@
             1. 可以在函数外面访问到函数内部的变量 --- 需要利用闭包函数
             2. 延长了变量的生命周期 --- 需要利用闭包函数
             3. 闭包函数(不会销毁的空间) -- 内存溢出
+            浏览器的垃圾回收机制：计数和标记
+            当变量进入环境，要么计数要么给个标记，如果计数为0，或者标记为离开环境，垃圾回收机制进行回收，如果无法回收，形成内存泄漏(内存溢出).
     */
 
     function outer() {
