--- a/第五周/day23/02-数据劫持.html
+++ b/第五周/day23/02-数据劫持.html
@@ -47,6 +47,7 @@
         set(val) {
             obj.age = val
             box.innerHTML = `你好,我叫${target.name}, 我今年${target.age}`
+            console.log(obj, target);
         }
     })
 
