--- a/第四周/day19/放大镜/index.html
+++ b/第四周/day19/放大镜/index.html
@@ -13,21 +13,21 @@
     <div class="box" id="box">
         <!-- 展示图片的位置 -->
         <div class="show">
-            <!-- <img src="./imgs/m.png" alt=""> -->
+            <img src="./imgs/m.png" alt="">
             <div class="mask"></div>
         </div>
         <ul class="list">
             <!-- 商品列表小图 -->
-            <!-- <li class="active" data-show='./imgs/m.png' data-enlarge='./imgs/b.png'>
+            <li class="active" data-show='./imgs/m.png' data-enlarge='./imgs/b.png'>
                 <img src="./imgs/s.png" alt="">
             </li>
             <li data-show='./imgs/m.png' data-enlarge='./imgs/b.png'>
                 <img src="./imgs/s.png" alt="">
-            </li> -->
+            </li>
         </ul>
         <div class="enlarge">
             <!-- 大图 -->
-            <!-- <img src="./imgs/b.png" alt=""> -->
+            <img src="./imgs/b.png" alt="">
         </div>
     </div>
 </body>
