--- a/第二周/day07/04-reduce.html
+++ b/第二周/day07/04-reduce.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body></body>
+
 </html>
 <script>
   /*
@@ -31,17 +34,18 @@
 
   var arr = [100, 200, 300, 400, 500]
 
-  //   var res = arr.reduce(function (prev, item, index) {
-  //     console.log(prev, item, index) // 迭代的结果
-  //     return prev + item
-  //   })
+  var res = arr.reduce(function (prev, item, index) {
+    console.log(prev, item, index) // 迭代的结果
+    return prev + '-'  + item
+  })
+  console.log(res);
 
-  //   var res = arr.reduce(function (prev, item, index) {
-  //     console.log(prev, item, index) // 迭代的结果
-  //     // 把上一次的结果当做下一次开始的条件
-  //     return prev + "-" + item
-  //   }, 50)
-  //   console.log(res)
+    var res = arr.reduce(function (prev, item, index) {
+      console.log(prev, item, index) // 迭代的结果
+      // 把上一次的结果当做下一次开始的条件
+      return prev + "-" + item
+    }, 50)
+    console.log(res)
 
   // 累加 求数组每一个数组的和
   //   var res = arr.reduce(function (prev, item) {
@@ -58,9 +62,9 @@
 
   // [1, 2, 3, 4, 5] 求  1^2 + 2^2 +3 ^2 +...+ 5^2
 
-  var res = arr.reduce(function (prev, item) {
-    return prev + item * item
-  })
+  // var res = arr.reduce(function (prev, item) {
+  //   return prev + item * item
+  // })
 
-  console.log(res)
+  // console.log(res)
 </script>
