--- a/第五周/day23/01-Object.defineProperty.html
+++ b/第五周/day23/01-Object.defineProperty.html
@@ -12,7 +12,7 @@
 
 </html>
 <script>
-    Object.defineProperty
+    // Object.defineProperty
     /*
         Object.defineProperty 方法
 
@@ -55,6 +55,7 @@
     // })
     // obj.name = 'jack'
     // obj.age = 20 // 修改失败
+    // // console.log(obj);
     // delete obj.age
     // console.log(obj);
 
@@ -73,7 +74,7 @@
     // const obj = { name: 'tom' }
     // Object.defineProperty(obj, 'age', {
     //     value: 18,
-    //     // enumerable: true // 可以遍历
+    //     enumerable: true // 可以遍历
     // })
     // for (let k in obj) {
     //     console.log(k, obj[k]);
@@ -84,7 +85,7 @@
     // const obj = { name: 'tom' }
     // Object.defineProperty(obj, 'age', {
     //     value: 18,
-    //     // configurable: true // 可以遍历
+    //     configurable: true // 可以遍历
     // })
     // delete obj.age
     // console.log(obj);
@@ -103,7 +104,7 @@
     //     }
     // })
 
-    // console.log(obj.age); // 只要获取， 就会自动触发get方法
+    // // console.log(obj.age); // 只要获取， 就会自动触发get方法
     // obj.age = 19 // 只要设置，就会自动触发set方法
 
 
@@ -118,12 +119,13 @@
         },
         set(val) {
             // 设置
-            console.log('set', val);
+            // console.log('set', val);
             v = val
         }
     })
 
     obj.age = 20
+    console.log(obj.age);
 
 
 
